--- a/src/components/video_item/video_item.module.css
+++ b/src/components/video_item/video_item.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 50%;
+  /* width: 50%; */
   border: 1px solid lightgray;
   padding: 0.2em;
   box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 10px rgba(0, 0, 0, 0);
@@ -11,6 +11,12 @@
   align-items: center;
   cursor: pointer;
   
+}
+.container.grid{
+  width:50%;
+}
+.container.list{
+  width:100%;
 }
 
 .video:hover {
